refactor: use Files.readString (Java 11+)
Motivation:
Files.readString was introduced in Java 11 and provides a cleaner API
for reading an entire file into a String, replacing the
new String(Files.readAllBytes(path), charset) pattern.

Modification:
Replace new String(Files.readAllBytes(path), "UTF-8") with
Files.readString(path, StandardCharsets.UTF_8) in two files.

Result:
More idiomatic Java 11+ code with identical behavior.

Tests:
Not run - behavior-preserving refactoring

References:
None - Java 11+ API migration